# speakeasy-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  Test-Dictator.ps1  dictator-cpu.spec  dictator.spec  download_model.py  pyproject.toml  speakeasy-cpu.spec  speakeasy.spec
.github/: copilot-instructions.md
dictator/: __init__.py  __main__.py  _constants.py  clipboard.py  config.py  gpu_monitor.py  hotkeys.py  main_window.py  model_downloader.py  pro_preset.py  pro_settings_dialog.py  settings_dialog.py  text_processor.py  workers.py
installer/: Build-Installer.ps1  Install-Dictator-Source.ps1  Install-SpeakEasy-Source.ps1  cohere-model-setup.ps1  dictator-cpu-setup.iss  dictator-setup.iss  speakeasy-cpu-setup.iss  speakeasy-setup.iss
speakeasy/: __init__.py  __main__.py  _runtime_hook_dll.py  config.py  developer_panel.py  hotkeys.py  main_window.py  model_downloader.py  pro_mode_widget.py  pro_preset.py  pro_settings_dialog.py  settings_dialog.py  text_processor.py  theme.py  workers.py
tests/: conftest.py  test_audio.py  test_audio_utils.py  test_build_naming.py  test_cohere_transcribe.py  test_config.py  test_config_persistence.py  test_developer_panel_live.py  test_engine_base.py  test_engine_load.py  test_frozen_compat.py  test_main_window_layout.py  test_model_downloader.py  test_model_presence.py  test_pro_mode_widget.py  test_pro_preset.py  test_pro_settings_dialog_ok.py  test_professional_mode.py  test_realtime_widget.py  test_settings_dialog.py  test_settings_widget.py  test_text_processor.py  test_token_sparkline.py
(+10 files in other folders)
