[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dictator"
version = "0.1.0"
description = "dictat0r.AI — Native Windows voice-to-text with GPU acceleration — Granite or Cohere engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "kwp490" }]

dependencies = [
    "PySide6>=6.6,<7",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "keyboard>=0.13",
    "nvidia-ml-py>=12.0; sys_platform == 'win32'",
    "openai>=1.0",
    "keyring>=25.0",
    "transformers>=5.4.0",
    "accelerate>=1.0",
    "torch>=2.1",
    "torchaudio>=2.1",
    "huggingface-hub>=0.34.0",
    "sentencepiece",
    "protobuf",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
]

[project.scripts]
dictator = "dictator.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
